--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,12 @@ coreapi==2.3.3
 coreschema==0.0.4
 defusedxml==0.5.0
 diff-match-patch==20181111
-Django==2.2
+Django
 django-filter==2.0.0
 django-filters==0.2.1
 django-import-export==1.2.0
 django-jet==1.0.8
+django-rest-framework==0.1.0
 django-rest-swagger==2.2.0
 django-sendsms==0.3.1
 djangorestframework==3.9.2
@@ -29,6 +30,9 @@ MarkupSafe==1.1.1
 mysqlclient==1.4.2.post1
 odfpy==1.4.0
 openapi-codec==1.3.2
+openpyxl==2.5.14
+pyexcel==0.5.13
+pyexcel-io==0.5.17
 pyexcel-ods==0.5.6
 pyexcel-webio==0.1.4
 pyexcel-xls==0.5.8
